[package]
name = "mule_gb"
version = "0.1.0"
edition = "2024"

[lib]
name = "mule_gb"

[[bin]]
name = "mgb"
patch = "src/bin/mgb/main.rs"
required-features = ["mgb"]

[features]
mgb = ["dep:clap", "dep:serde-lexpr", "dep:serde_json"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = { version = "0.1.3", optional = true }
serde_json = { version = "1.0.140", optional = true }
clap = { version = "4.5.40", optional = true, features = ["derive"] }
